# DeafHelperPico

DeafHelper/: inference-app
DeafHelper/src/: main.cpp  tflite_model.h
deaf-helper/: CMakeLists.txt
deaf-helper/lib/microphone-library-for-pico/src/: pdm_microphone.c
deaf-helper/src/: drv2605.c  drv2605.h  hc08.c  hc08.h  main.cpp  ml_model.cpp  ml_model.h
